<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DrumPad">

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_settings"
        app:layout_constraintEnd_toEndOf="@+id/gridLayoutDrumPad"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btnPlay"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/play_toggle_button"
        android:checked="false"
        android:gravity="center"
        android:paddingStart="0dp"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayoutDrumPad" />

    <GridLayout
        android:id="@+id/gridLayoutDrumPad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPad1"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_pink_selector"
            android:text="@string/pad1_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad2"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_yellow_selector"
            android:text="@string/pad2_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad3"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_green_selector"
            android:text="@string/pad3_name"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="@+id/btnPad2"
            app:layout_constraintStart_toEndOf="@+id/btnPad2" />

        <Button
            android:id="@+id/btnPad4"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_blue_selector"
            android:text="@string/pad4_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad5"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_purple_selector"
            android:text="@string/pad5_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad6"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_pink_selector"
            android:text="@string/pad6_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad7"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_pink_selector"
            android:text="@string/pad7_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad8"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_green_selector"
            android:text="@string/pad8_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad9"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_pink_selector"
            android:text="@string/pad9_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad10"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_pink_selector"
            android:text="@string/pad10_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad11"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_purple_selector"
            android:text="@string/pad11_name"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnPad12"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="@drawable/pad_yellow_selector"
            android:text="@string/pad12_name"
            app:backgroundTint="@null" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>